# otter-ai-cli

./: .gitignore  AGENTS.md  CLI_GUIDE.txt  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
otter/src/: auth.rs  folders.rs
otterai/: Cargo.toml  cli.py
otterai/src/: client.rs
otterai/tests/: live.rs
python-api/otterai/: otterai.py
python-cli/otterai_cli/: __init__.py  cli.py
rust-cli/otter/: Cargo.toml
rust-cli/otter/src/: groups.rs  main.rs  speakers.rs  util.rs
rust-cli/otterai/: Cargo.toml
rust-cli/otterai/src/: client.rs  config.rs  lib.rs
rust-cli/otterai/tests/: live.rs
rust/otter/: Cargo.toml
src/: auth.rs  lib.rs  main.rs  speeches.rs  util.rs
tests/: live.rs  test_cli.py
