[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "otterai-api"
version = "0.1.0"
description = "Unofficial Otter.ai API client and CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "python-dotenv>=1.2.1",
    "requests",
    "requests_toolbelt",
]

[project.scripts]
otter = "otterai_cli.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black"]

[tool.setuptools]
packages = ["otterai", "otterai_cli"]

[tool.setuptools.package-dir]
otterai = "python-api/otterai"
otterai_cli = "python-cli/otterai_cli"
