[package]
name = "otterai"
description = "Unofficial Otter.ai API client (Rust port of the otterai Python package)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "cookies", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
dirs = "6"

[dev-dependencies]
tempfile = "3"
