[package]
name = "otter"
description = "Otter.ai CLI (Rust port)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
otterai = { path = "../otterai" }
clap = { version = "4", features = ["derive"] }
rpassword = "7"
serde_json = { version = "1", features = ["preserve_order"] }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
chrono-tz = "0.10"
